--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,8 @@ bundler_args: --without development
 language: ruby
 rvm:
   - 2.1.0
-services: elasticsearch
+before_install:
+  - wget https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-1.4.0.deb && sudo dpkg -i elasticsearch-1.4.0.deb && true
+  - 'echo ''script.disable_dynamic: false'' | sudo tee --append /etc/elasticsearch/elasticsearch.yml'
+  - 'echo ''index.number_of_shards: 1'' | sudo tee --append /etc/elasticsearch/elasticsearch.yml'
+  - sudo service elasticsearch start
