Fix environments files

--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -1,2 +1,9 @@
 production:
   index_name:
+  url:
+  username:
+  password:
+development:
+  host: 'localhost:9200'
+test:
+  host: 'localhost:9200'
