Use url instead

--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -4,6 +4,6 @@ production:
   username:
   password:
 development:
-  host: 'localhost:9200'
+  url: 'localhost:9200'
 test:
-  host: 'localhost:9200'
+  url: 'localhost:9200'
