--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,21 @@ jobs:
           paths:
             - ~/app/vendor/bundle
       - run:
+          name: Setup Code Climate test-reporter
+          command: |
+            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+            chmod +x ./cc-test-reporter
+      - run:
           name: Waiting for Elasticsearch
           command: dockerize --wait http://localhost:9200 -timeout 1m
-      - run: bundle exec rspec spec
+      - run:
+          name: RSpec
+          environment:
+            CC_TEST_REPORTER_ID: 23fafa5236bdcd23ae061f341aa8196519c3a2b9ca894f8c92dfedf03ee23511
+          command: |
+            ./cc-test-reporter before-build
+            bundle exec rspec spec
+            ./cc-test-reporter after-build --exit-code $?
+      - store_artifacts:
+          path: coverage
+          destination: ~/coverage
